--------------------------------------------
24-Nov-2010,  version 1.7-2
crosstab can now return results in 'long' format
more complete and flexible recycling in overlay and Arith

--------------------------------------------
23-Nov-2010,  version 1.7-1
New version of alignExtent (bug reported by Keven Ummel)
overlay now allows for RasterStackBrick / RasterLayer combination (bug reported by Keven Ummel)
cluster object stored as 'option'

--------------------------------------------
17-Nov-2010,  version 1.6-22
NAflag honored when writing ascii file. 
multicore support for resample

--------------------------------------------
15-Nov-2010,  version 1.6-20
Bug fix in pairs (David Ramsey)
Bug fix in rasterize with lines (Julian Burgos)

--------------------------------------------
14-Nov-2010,  version 1.6-19
Fixed bug in .stopGDALwrting (reported by Kevin Ummel and Lyndon Estes)
Experimental support for multicore in functions projectRaster and distance

--------------------------------------------
13-Nov-2010,  version 1.6-18
Started support for multi-core/cluster processing (together with Matteo Mattiuzzi)
Fixed bug in aggregate with unequal x and y fact (thanks to Kevin Ummel for reporting)
Added drop=FALSE to "[" methods, to return a Raster*. 

--------------------------------------------
10-Nov-2010,  version 1.6-17
[[ method to extract layers from multi-layer objecs
Writing cdf files now uses the CF standard 'degrees_east' and 'degrees_north' as variable names in lon/lat data (suggested by Kevin Ummel)

--------------------------------------------
8-Nov-2010,  version 1.6-16
fixed bug when using se.fit=TRUE in predict (it did not respond to it). Reported by Eliane Meier. 
Also changed the above that when se.fit=T, both the prediction AND the s.e. are returned (as a RasterBrick)
changed NAvalue argument in writeRaster to NAflag to avoid confusion with NAvalue function